fix:whatsapp button size and fix login button on mobile

--- a/styles/css/global/home/vtex.flex-layout.css
+++ b/styles/css/global/home/vtex.flex-layout.css
@@ -58,3 +58,7 @@
     margin-top   : 2.5rem;
     margin-bottom: 2.5rem;
 }
+
+.flexCol--product__information {
+    gap: 0.5rem;
+}
